--- a/overview/index.html
+++ b/overview/index.html
@@ -2,16 +2,22 @@
 <html>
     <head>
         <meta http-equiv="content-type" content="text/html; charset=utf-8">
-        <link rel="stylesheet" type="text/css" href="css/style.css">
+        <link rel="stylesheet" type="text/css" href="css/index.css">
         <script src="js/d3.min.js"></script>
         <script src="js/d3-queue.min.js"></script>
         <script src="js/jquery-2.2.2.min.js"></script>
-        <title>VAC MC2</title>
+        <title>VAC MC2 - General</title>
     </head>
     <body>
         <header>
             <center>
                 <h1>Mini Challenge 2</h1>
+                <div id="navigation-buttons">
+                    <button id="button-general" class="button" type="button" value="index.html">General</button>
+                    <button id="button-f1" class="button" type="button" value="floor1.html">Floor 1</button>
+                    <button id="button-f2" class="button" type="button" value="floor2.html">Floor 2</button>
+                    <button id="button-f3" class="button" type="button" value="floor3.html">Floor 3</button>
+                </div>
             </center>
         </header>
         <main>
