--- a/overview/index.html
+++ b/overview/index.html
@@ -44,38 +44,9 @@
                     </select>
                     <h3 id="general-vis-info"></h3>
                 </div>
-                <div id="f1-div" class="vis">
-                    <h2>Floor 1 readings</h2>
-                    <div id="f1-dropdowns">
-                        <select id="f1-sensors" name="sensors">
-                            <option value="f1LightsPower" selected>Lights Power</option><!-- niet zone 6-->
-                            <option value="f1EquipmentPower">Equipment Power</option><!-- niet zone 6-->
-                            <option value="f1ThermostatTemp">Thermostat Temp</option><!-- niet zone 6-->
-                            <option value="f1ThermostatHeatingSetpoint">Thermostat Heating Setpoint</option><!-- niet zone 6-->
-                            <option value="f1ThermostatCoolingSetpoint">Thermostat Cooling Setpoint</option><!-- niet zone 6-->
-                            <option value="f1VavAvailabilityManagerNightCycleControlStatus">VAV Availability Manager Night Cycle Control Status</option><!-- no zone-->
-                            <option value="f1VavSysSupplyFanFanPower">VAV_SYS SUPPLY FAN:Fan Power</option><!-- no zone-->
-                            <option value="f1BathExhaustFanPower">BATH_EXHAUST:Fan Power</option><!-- no zone-->
-                            <option value="f1VavReheatDamperPosition">VAV REHEAT Damper Position</option><!-- niet zone 6-->
-                            <option value="f1ReheatCoilPower">REHEAT COIL Power</option><!-- niet zone 6-->
-                            <option value="f1VavSysHeatingCoilPower">VAV_SYS HEATING COIL Power</option><!-- no zone-->
-                            <option value="f1VavSysOutfoorAirFlowFraction">VAV_SYS Outdoor Air Flow Fraction</option><!-- no zone-->
-                            <option value="f1VavSysOutdoorAirMassFlowRate">VAV_SYS Outdoor Air Mass Flow Rate</option><!-- no zone-->
-                            <option value="f1VavSysCoolingCoilPower">VAV_SYS COOLING COIL Power</option><!-- no zone-->
-                            <option value="f1VavSysAirLoopInletTemperature">VAV_SYS AIR LOOP INLET Temperature</option><!-- no zone-->
-                            <option value="f1VavSysAirLoopInletMassFlowRate">VAV_SYS AIR LOOP INLET Mass Flow Rate</option><!-- no zone-->
-                            <option value="f1VavSysSupplyFanOutletTemperature">VAV_SYS SUPPLY FAN OUTLET Temperature</option><!-- no zone-->
-                            <option value="f1VavSysSupplyFanOutletMassFlowRate">VAV_SYS SUPPLY FAN OUTLET Mass Flow Rate</option><!-- no zone-->
-                            <option value="f1ReturnOutletCo2Concentration">RETURN OUTLET CO2 Concentration</option><!-- niet zone 6-->
-                            <option value="f1SupplyInletTemperature">SUPPLY INLET Temperature</option><!-- niet zone 6-->
-                            <option value="f1SupplyInletMassFlowRate">SUPPLY INLET Mass Flow Rate</option><!-- niet zone 6-->
-                            <option value="f1MechanicalVentilationMassFlowRate">Mechanical Ventilation Mass Flow Rate</option><!-- alleen zone 1-->
-                        </select>
-                    </div>
-                </div>
                 <div id="f2-div" class="vis">
                     <h2>Floor 2 readings</h2>
-                    <div id="f2-dropdowns">
+                    <div id="f2-dropdown">
                         <select id="f2-sensors" name="sensors">
                             <option value="f2LightsPower" selected>Lights Power</option><!-- niet zone 13-->
                             <option value="f2EquipmentPower">Equipment Power</option><!-- niet zone 13-->
@@ -103,7 +74,7 @@
                 </div>
                 <div id="f3-div" class="vis">
                     <h2>Floor 3 readings</h2>
-                    <div id="f3-dropdowns">
+                    <div id="f3-dropdown">
                         <select id="f3-sensors" name="sensors">
                             <option value="f3LightsPower" selected>Lights Power</option><!-- niet zones 4 en 12-->
                             <option value="f3EquipmentPower">Equipment Power</option><!-- niet zones 4 en 12-->
