--- a/overview/floor1.html
+++ b/overview/floor1.html
@@ -1,20 +1,76 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta http-equiv="content-type" content="text/html; charset=utf-8">
+        <link rel="stylesheet" type="text/css" href="css/floor1.css">
+        <script src="js/d3.min.js"></script>
+        <script src="js/d3-queue.min.js"></script>
+        <script src="js/jquery-2.2.2.min.js"></script>
         <title>VAC MC2 - Floor 1</title>
     </head>
     <body>
         <header>
-            <h1>Mini Challenge 2</h1>
-            <div id="navigation-buttons">
-                <button id="button-general" class="button" type="button">General</button>
-                <button id="button-f1" class="button" type="button">Floor 1</button>
-                <button id="button-f2" class="button" type="button">Floor 2</button>
-                <button id="button-f3" class="button" type="button">Floor 3</button>
-            </div>
+            <center>
+                <h1>Mini Challenge 2</h1>
+                <div id="navigation-buttons">
+                    <button id="button-general" class="button" type="button" value="index.html">General</button>
+                    <button id="button-f1" class="button" type="button" value="floor1.html">Floor 1</button>
+                    <button id="button-f2" class="button" type="button" value="floor2.html">Floor 2</button>
+                    <button id="button-f3" class="button" type="button" value="floor3.html">Floor 3</button>
+                </div>
+            </center>
         </header>
         <main>
-            hello world
+            <center>
+                <div id="f1-div" class="vis">
+                    <h2>Floor 1 readings</h2>
+                    <div id="f1-dropdown">
+                        <select id="f1-sensors" name="sensors">
+                            <option value="lightsPower" selected>Lights Power</option><!-- niet zone 6-->
+                            <option value="equipmentPower">Equipment Power</option><!-- niet zone 6-->
+                            <option value="thermostatTemp">Thermostat Temp</option><!-- niet zone 6-->
+                            <option value="thermostatHeatingSetpoint">Thermostat Heating Setpoint</option><!-- niet zone 6-->
+                            <option value="thermostatCoolingSetpoint">Thermostat Cooling Setpoint</option><!-- niet zone 6-->
+                            <option value="vavAvailabilityManagerNightCycleControlStatus">VAV Availability Manager Night Cycle Control Status</option><!-- no zone-->
+                            <option value="vavSysSupplyFanFanPower">VAV_SYS SUPPLY FAN:Fan Power</option><!-- no zone-->
+                            <option value="bathExhaustFanPower">BATH_EXHAUST:Fan Power</option><!-- no zone-->
+                            <option value="vavReheatDamperPosition">VAV REHEAT Damper Position</option><!-- niet zone 6-->
+                            <option value="reheatCoilPower">REHEAT COIL Power</option><!-- niet zone 6-->
+                            <option value="vavSysHeatingCoilPower">VAV_SYS HEATING COIL Power</option><!-- no zone-->
+                            <option value="vavSysOutdoorAirFlowFraction">VAV_SYS Outdoor Air Flow Fraction</option><!-- no zone-->
+                            <option value="vavSysOutdoorAirMassFlowRate">VAV_SYS Outdoor Air Mass Flow Rate</option><!-- no zone-->
+                            <option value="vavSysCoolingCoilPower">VAV_SYS COOLING COIL Power</option><!-- no zone-->
+                            <option value="vavSysAirLoopInletTemperature">VAV_SYS AIR LOOP INLET Temperature</option><!-- no zone-->
+                            <option value="vavSysAirLoopInletMassFlowRate">VAV_SYS AIR LOOP INLET Mass Flow Rate</option><!-- no zone-->
+                            <option value="vavSysSupplyFanOutletTemperature">VAV_SYS SUPPLY FAN OUTLET Temperature</option><!-- no zone-->
+                            <option value="vavSysSupplyFanOutletMassFlowRate">VAV_SYS SUPPLY FAN OUTLET Mass Flow Rate</option><!-- no zone-->
+                            <option value="returnOutletCo2Concentration">RETURN OUTLET CO2 Concentration</option><!-- niet zone 6-->
+                            <option value="supplyInletTemperature">SUPPLY INLET Temperature</option><!-- niet zone 6-->
+                            <option value="supplyInletMassFlowRate">SUPPLY INLET Mass Flow Rate</option><!-- niet zone 6-->
+                            <option value="mechanicalVentilationMassFlowRate">Mechanical Ventilation Mass Flow Rate</option><!-- alleen zone 1-->
+                        </select>
+                    </div>
+                    <br>
+                    <div id="f1-checkboxes">
+                        <!-- <form action="">
+                            <input class="zone-checkbox" type="checkbox" name="zone" value="z1">Zone 1<br>
+                            <input class="zone-checkbox" type="checkbox" name="zone" value="z2">Zone 2
+                        </form> -->
+                        <label for="zone1"><input type="checkbox" id="zone1" class="zone-checkbox" checked/> <span id="zone1-text">Zone 1</span></label>
+                        <label for="zone2"><input type="checkbox" id="zone2" class="zone-checkbox" checked/> <span id="zone2-text">Zone 2</span></label>
+                        <label for="zone3"><input type="checkbox" id="zone3" class="zone-checkbox" checked/> <span id="zone3-text">Zone 3</span></label>
+                        <label for="zone4"><input type="checkbox" id="zone4" class="zone-checkbox" checked/> <span id="zone4-text">Zone 4</span></label>
+                        <label for="zone5"><input type="checkbox" id="zone5" class="zone-checkbox" checked/> <span id="zone5-text">Zone 5</span></label>
+                        <label for="zone6"><input type="checkbox" id="zone6" class="zone-checkbox" disabled/> <span id="zone6-text">Zone 6</span></label>
+                        <label for="zone7"><input type="checkbox" id="zone7" class="zone-checkbox" checked/> <span id="zone7-text">Zone 7</span></label>
+                        <label for="zone8a"><input type="checkbox" id="zone8a" class="zone-checkbox" checked/> <span id="zone8a-text">Zone 8a</span></label>
+                        <label for="zone8b"><input type="checkbox" id="zone8b" class="zone-checkbox" checked/> <span id="zone8b-text">Zone 8b</span></label>
+                    </div>
+                    <h3 id="f1-vis-info"></h3>
+                </div>
+            </center>
         </main>
+        <script src="js/dimensions.js" defer></script>
+        <script src="js/floor1.js" defer></script>
     </body>
 </html>
