update van welke zones geen sensorinformatie hebben

--- a/overview/index.html
+++ b/overview/index.html
@@ -65,9 +65,9 @@
                             <option value="f2VavSysAirLoopInletMassFlowRate">VAV_SYS AIR LOOP INLET Mass Flow Rate</option><!-- no zone-->
                             <option value="f2VavSysSupplyFanOutletTemperature">VAV_SYS SUPPLY FAN OUTLET Temperature</option><!-- no zone-->
                             <option value="f2VavSysSupplyFanOutletMassFlowRate">VAV_SYS SUPPLY FAN OUTLET Mass Flow Rate</option><!-- no zone-->
-                            <option value="f2ReturnOutletCo2Concentration">RETURN OUTLET CO2 Concentration</option><!-- alleen zones 1-7-->
-                            <option value="f2SupplyInletTemperature">SUPPLY INLET Temperature</option><!-- alleen zones 1-7-->
-                            <option value="f2SupplyInletMassFlowRate">SUPPLY INLET Mass Flow Rate</option><!-- alleen zones 1-7-->
+                            <option value="f2ReturnOutletCo2Concentration">RETURN OUTLET CO2 Concentration</option><!-- niet zone 13-->
+                            <option value="f2SupplyInletTemperature">SUPPLY INLET Temperature</option><!-- niet zone 13-->
+                            <option value="f2SupplyInletMassFlowRate">SUPPLY INLET Mass Flow Rate</option><!-- niet zone 13-->
                             <option value="f2VavAvailabilityManagerNightCycleControlStatus">VAV Availability Manager Night Cycle Control Status</option><!-- no zone-->
                         </select>
                     </div>
