unieke identifiers gemaakt voor floor1.html voor het geval dat alles bij elkaar komt

--- a/overview/floor1.html
+++ b/overview/floor1.html
@@ -52,19 +52,15 @@
                     </div>
                     <br>
                     <div id="f1-checkboxes">
-                        <!-- <form action="">
-                            <input class="zone-checkbox" type="checkbox" name="zone" value="z1">Zone 1<br>
-                            <input class="zone-checkbox" type="checkbox" name="zone" value="z2">Zone 2
-                        </form> -->
-                        <label for="zone1"><input type="checkbox" id="zone1" class="zone-checkbox" checked/> <span id="zone1-text">Zone 1</span></label>
-                        <label for="zone2"><input type="checkbox" id="zone2" class="zone-checkbox" checked/> <span id="zone2-text">Zone 2</span></label>
-                        <label for="zone3"><input type="checkbox" id="zone3" class="zone-checkbox" checked/> <span id="zone3-text">Zone 3</span></label>
-                        <label for="zone4"><input type="checkbox" id="zone4" class="zone-checkbox" checked/> <span id="zone4-text">Zone 4</span></label>
-                        <label for="zone5"><input type="checkbox" id="zone5" class="zone-checkbox" checked/> <span id="zone5-text">Zone 5</span></label>
-                        <label for="zone6"><input type="checkbox" id="zone6" class="zone-checkbox" disabled/> <span id="zone6-text">Zone 6</span></label>
-                        <label for="zone7"><input type="checkbox" id="zone7" class="zone-checkbox" checked/> <span id="zone7-text">Zone 7</span></label>
-                        <label for="zone8a"><input type="checkbox" id="zone8a" class="zone-checkbox" checked/> <span id="zone8a-text">Zone 8a</span></label>
-                        <label for="zone8b"><input type="checkbox" id="zone8b" class="zone-checkbox" checked/> <span id="zone8b-text">Zone 8b</span></label>
+                        <label for="zone1"><input type="checkbox" id="f1-zone1" class="f1-zone-checkbox" checked/> <span id="f1-zone1-text">Zone 1</span></label>
+                        <label for="zone2"><input type="checkbox" id="f1-zone2" class="f1-zone-checkbox" checked/> <span id="f1-zone2-text">Zone 2</span></label>
+                        <label for="zone3"><input type="checkbox" id="f1-zone3" class="f1-zone-checkbox" checked/> <span id="f1-zone3-text">Zone 3</span></label>
+                        <label for="zone4"><input type="checkbox" id="f1-zone4" class="f1-zone-checkbox" checked/> <span id="f1-zone4-text">Zone 4</span></label>
+                        <label for="zone5"><input type="checkbox" id="f1-zone5" class="f1-zone-checkbox" checked/> <span id="f1-zone5-text">Zone 5</span></label>
+                        <label for="zone6"><input type="checkbox" id="f1-zone6" class="f1-zone-checkbox" disabled/> <span id="f1-zone6-text">Zone 6</span></label>
+                        <label for="zone7"><input type="checkbox" id="f1-zone7" class="f1-zone-checkbox" checked/> <span id="f1-zone7-text">Zone 7</span></label>
+                        <label for="zone8a"><input type="checkbox" id="f1-zone8a" class="f1-zone-checkbox" checked/> <span id="f1-zone8a-text">Zone 8a</span></label>
+                        <label for="zone8b"><input type="checkbox" id="f1-zone8b" class="f1-zone-checkbox" checked/> <span id="f1-zone8b-text">Zone 8b</span></label>
                     </div>
                     <h3 id="f1-vis-info"></h3>
                 </div>
