--- a/overview/floor1.html
+++ b/overview/floor1.html
@@ -26,28 +26,28 @@
                     <h2>Floor 1 readings</h2>
                     <div id="f1-dropdown">
                         <select id="f1-sensors" name="sensors">
-                            <option value="lightsPower" selected>Lights Power</option><!-- niet zone 6-->
-                            <option value="equipmentPower">Equipment Power</option><!-- niet zone 6-->
-                            <option value="thermostatTemp">Thermostat Temp</option><!-- niet zone 6-->
-                            <option value="thermostatHeatingSetpoint">Thermostat Heating Setpoint</option><!-- niet zone 6-->
-                            <option value="thermostatCoolingSetpoint">Thermostat Cooling Setpoint</option><!-- niet zone 6-->
-                            <option value="vavAvailabilityManagerNightCycleControlStatus">VAV Availability Manager Night Cycle Control Status</option><!-- no zone-->
-                            <option value="vavSysSupplyFanFanPower">VAV_SYS SUPPLY FAN:Fan Power</option><!-- no zone-->
-                            <option value="bathExhaustFanPower">BATH_EXHAUST:Fan Power</option><!-- no zone-->
-                            <option value="vavReheatDamperPosition">VAV REHEAT Damper Position</option><!-- niet zone 6-->
-                            <option value="reheatCoilPower">REHEAT COIL Power</option><!-- niet zone 6-->
-                            <option value="vavSysHeatingCoilPower">VAV_SYS HEATING COIL Power</option><!-- no zone-->
-                            <option value="vavSysOutdoorAirFlowFraction">VAV_SYS Outdoor Air Flow Fraction</option><!-- no zone-->
-                            <option value="vavSysOutdoorAirMassFlowRate">VAV_SYS Outdoor Air Mass Flow Rate</option><!-- no zone-->
-                            <option value="vavSysCoolingCoilPower">VAV_SYS COOLING COIL Power</option><!-- no zone-->
-                            <option value="vavSysAirLoopInletTemperature">VAV_SYS AIR LOOP INLET Temperature</option><!-- no zone-->
-                            <option value="vavSysAirLoopInletMassFlowRate">VAV_SYS AIR LOOP INLET Mass Flow Rate</option><!-- no zone-->
-                            <option value="vavSysSupplyFanOutletTemperature">VAV_SYS SUPPLY FAN OUTLET Temperature</option><!-- no zone-->
-                            <option value="vavSysSupplyFanOutletMassFlowRate">VAV_SYS SUPPLY FAN OUTLET Mass Flow Rate</option><!-- no zone-->
-                            <option value="returnOutletCo2Concentration">RETURN OUTLET CO2 Concentration</option><!-- niet zone 6-->
-                            <option value="supplyInletTemperature">SUPPLY INLET Temperature</option><!-- niet zone 6-->
-                            <option value="supplyInletMassFlowRate">SUPPLY INLET Mass Flow Rate</option><!-- niet zone 6-->
-                            <option value="mechanicalVentilationMassFlowRate">Mechanical Ventilation Mass Flow Rate</option><!-- alleen zone 1-->
+                            <option value="f1lightsPower" selected>Lights Power</option><!-- niet zone 6-->
+                            <option value="f1equipmentPower">Equipment Power</option><!-- niet zone 6-->
+                            <option value="f1thermostatTemp">Thermostat Temp</option><!-- niet zone 6-->
+                            <option value="f1thermostatHeatingSetpoint">Thermostat Heating Setpoint</option><!-- niet zone 6-->
+                            <option value="f1thermostatCoolingSetpoint">Thermostat Cooling Setpoint</option><!-- niet zone 6-->
+                            <option value="f1vavAvailabilityManagerNightCycleControlStatus">VAV Availability Manager Night Cycle Control Status</option><!-- no zone-->
+                            <option value="f1vavSysSupplyFanFanPower">VAV_SYS SUPPLY FAN:Fan Power</option><!-- no zone-->
+                            <option value="f1bathExhaustFanPower">BATH_EXHAUST:Fan Power</option><!-- no zone-->
+                            <option value="f1vavReheatDamperPosition">VAV REHEAT Damper Position</option><!-- niet zone 6-->
+                            <option value="f1reheatCoilPower">REHEAT COIL Power</option><!-- niet zone 6-->
+                            <option value="f1vavSysHeatingCoilPower">VAV_SYS HEATING COIL Power</option><!-- no zone-->
+                            <option value="f1vavSysOutdoorAirFlowFraction">VAV_SYS Outdoor Air Flow Fraction</option><!-- no zone-->
+                            <option value="f1vavSysOutdoorAirMassFlowRate">VAV_SYS Outdoor Air Mass Flow Rate</option><!-- no zone-->
+                            <option value="f1vavSysCoolingCoilPower">VAV_SYS COOLING COIL Power</option><!-- no zone-->
+                            <option value="f1vavSysAirLoopInletTemperature">VAV_SYS AIR LOOP INLET Temperature</option><!-- no zone-->
+                            <option value="f1vavSysAirLoopInletMassFlowRate">VAV_SYS AIR LOOP INLET Mass Flow Rate</option><!-- no zone-->
+                            <option value="f1vavSysSupplyFanOutletTemperature">VAV_SYS SUPPLY FAN OUTLET Temperature</option><!-- no zone-->
+                            <option value="f1vavSysSupplyFanOutletMassFlowRate">VAV_SYS SUPPLY FAN OUTLET Mass Flow Rate</option><!-- no zone-->
+                            <option value="f1returnOutletCo2Concentration">RETURN OUTLET CO2 Concentration</option><!-- niet zone 6-->
+                            <option value="f1supplyInletTemperature">SUPPLY INLET Temperature</option><!-- niet zone 6-->
+                            <option value="f1supplyInletMassFlowRate">SUPPLY INLET Mass Flow Rate</option><!-- niet zone 6-->
+                            <option value="f1mechanicalVentilationMassFlowRate">Mechanical Ventilation Mass Flow Rate</option><!-- alleen zone 1-->
                         </select>
                     </div>
                     <br>
