floor 2 werkt nu ook, kleuren zijn nog niet definitief

--- a/overview/floor2.html
+++ b/overview/floor2.html
@@ -26,27 +26,27 @@
                     <h2>Floor 2 readings</h2>
                     <div id="f2-dropdown">
                         <select id="f2-sensors" name="sensors">
-                            <option value="lightsPower" selected>Lights Power</option><!-- niet zone 13-->
-                            <option value="equipmentPower">Equipment Power</option><!-- niet zone 13-->
-                            <option value="thermostatTemp">Thermostat Temp</option><!-- niet zone 13-->
-                            <option value="thermostatHeatingSetpoint">Thermostat Heating Setpoint</option><!-- niet zone 13-->
-                            <option value="thermostatCoolingSetpoint">Thermostat Cooling Setpoint</option><!-- niet zone 13-->
-                            <option value="vavSysSupplyFanFanPower">VAV_SYS SUPPLY FAN:Fan Power</option><!-- no zone-->
-                            <option value="bathExhaustFanPower">BATH_EXHAUST:Fan Power</option><!-- no zone-->
-                            <option value="vavReheatDamperPosition">VAV REHEAT Damper Position</option><!-- niet zone 13-->
-                            <option value="reheatCoilPower">REHEAT COIL Power</option><!-- niet zone 13-->
-                            <option value="vavSysHeatingCoilPower">VAV_SYS HEATING COIL Power</option><!-- no zone-->
-                            <option value="vavSysOutfoorAirFlowFraction">VAV_SYS Outdoor Air Flow Fraction</option><!-- no zone-->
-                            <option value="vavSysOutdoorAirMassFlowRate">VAV_SYS Outdoor Air Mass Flow Rate</option><!-- no zone-->
-                            <option value="vavSysCoolingCoilPower">VAV_SYS COOLING COIL Power</option><!-- no zone-->
-                            <option value="vavSysAirLoopInletTemperature">VAV_SYS AIR LOOP INLET Temperature</option><!-- no zone-->
-                            <option value="vavSysAirLoopInletMassFlowRate">VAV_SYS AIR LOOP INLET Mass Flow Rate</option><!-- no zone-->
-                            <option value="vavSysSupplyFanOutletTemperature">VAV_SYS SUPPLY FAN OUTLET Temperature</option><!-- no zone-->
-                            <option value="vavSysSupplyFanOutletMassFlowRate">VAV_SYS SUPPLY FAN OUTLET Mass Flow Rate</option><!-- no zone-->
-                            <option value="returnOutletCo2Concentration">RETURN OUTLET CO2 Concentration</option><!-- niet zone 13-->
-                            <option value="supplyInletTemperature">SUPPLY INLET Temperature</option><!-- niet zone 13-->
-                            <option value="supplyInletMassFlowRate">SUPPLY INLET Mass Flow Rate</option><!-- niet zone 13-->
-                            <option value="vavAvailabilityManagerNightCycleControlStatus">VAV Availability Manager Night Cycle Control Status</option><!-- no zone-->
+                            <option value="f2lightsPower" selected>Lights Power</option><!-- niet zone 13-->
+                            <option value="f2equipmentPower">Equipment Power</option><!-- niet zone 13-->
+                            <option value="f2thermostatTemp">Thermostat Temp</option><!-- niet zone 13-->
+                            <option value="f2thermostatHeatingSetpoint">Thermostat Heating Setpoint</option><!-- niet zone 13-->
+                            <option value="f2thermostatCoolingSetpoint">Thermostat Cooling Setpoint</option><!-- niet zone 13-->
+                            <option value="f2vavSysSupplyFanFanPower">VAV_SYS SUPPLY FAN:Fan Power</option><!-- no zone-->
+                            <option value="f2bathExhaustFanPower">BATH_EXHAUST:Fan Power</option><!-- no zone-->
+                            <option value="f2vavReheatDamperPosition">VAV REHEAT Damper Position</option><!-- niet zone 13-->
+                            <option value="f2reheatCoilPower">REHEAT COIL Power</option><!-- niet zone 13-->
+                            <option value="f2vavSysHeatingCoilPower">VAV_SYS HEATING COIL Power</option><!-- no zone-->
+                            <option value="f2vavSysOutdoorAirFlowFraction">VAV_SYS Outdoor Air Flow Fraction</option><!-- no zone-->
+                            <option value="f2vavSysOutdoorAirMassFlowRate">VAV_SYS Outdoor Air Mass Flow Rate</option><!-- no zone-->
+                            <option value="f2vavSysCoolingCoilPower">VAV_SYS COOLING COIL Power</option><!-- no zone-->
+                            <option value="f2vavSysAirLoopInletTemperature">VAV_SYS AIR LOOP INLET Temperature</option><!-- no zone-->
+                            <option value="f2vavSysAirLoopInletMassFlowRate">VAV_SYS AIR LOOP INLET Mass Flow Rate</option><!-- no zone-->
+                            <option value="f2vavSysSupplyFanOutletTemperature">VAV_SYS SUPPLY FAN OUTLET Temperature</option><!-- no zone-->
+                            <option value="f2vavSysSupplyFanOutletMassFlowRate">VAV_SYS SUPPLY FAN OUTLET Mass Flow Rate</option><!-- no zone-->
+                            <option value="f2returnOutletCo2Concentration">RETURN OUTLET CO2 Concentration</option><!-- niet zone 13-->
+                            <option value="f2supplyInletTemperature">SUPPLY INLET Temperature</option><!-- niet zone 13-->
+                            <option value="f2supplyInletMassFlowRate">SUPPLY INLET Mass Flow Rate</option><!-- niet zone 13-->
+                            <option value="f2vavAvailabilityManagerNightCycleControlStatus">VAV Availability Manager Night Cycle Control Status</option><!-- no zone-->
                         </select>
                     </div>
                     <br>
