buttons voor index toegevoegd

--- a/overview/floor1.html
+++ b/overview/floor1.html
@@ -13,7 +13,8 @@
             <center>
                 <h1>Mini Challenge 2</h1>
                 <div id="navigation-buttons">
-                    <button id="button-general" class="button" type="button" value="index.html">General</button>
+                    <button id="button-index" class="button" type="button" value="index.html">Index</button>
+                    <button id="button-general" class="button" type="button" value="general.html">General</button>
                     <button id="button-f1" class="button" type="button" value="floor1.html">Floor 1</button>
                     <button id="button-f2" class="button" type="button" value="floor2.html">Floor 2</button>
                     <button id="button-f3" class="button" type="button" value="floor3.html">Floor 3</button>
