functionaliteit voor floor 3 toegevoegd

--- a/overview/floor3.html
+++ b/overview/floor3.html
@@ -27,6 +27,9 @@
                     <h2>Floor 3 readings</h2>
                     <div id="f3-dropdown">
                         <select id="f3-sensors" name="sensors">
+                            <!-- ZONE 12 ALLEEN REHEAT COIL POWER-->
+                            <!-- ZONE 9 GEEN REHEAT COIL POWER, MAAR DE REST WEL-->
+                            <!-- ZONE 4 KOMT HELEMAAL NIET VOOR-->
                             <option value="f3lightsPower" selected>Lights Power</option><!-- niet zones 4 en 12-->
                             <option value="f3equipmentPower">Equipment Power</option><!-- niet zones 4 en 12-->
                             <option value="f3thermostatTemp">Thermostat Temp</option><!-- niet zones 4 en 12-->
@@ -55,7 +58,7 @@
                         <label for="zone1"><input type="checkbox" id="f3-zone1" class="f3-zone-checkbox" checked/> <span id="f3-zone1-text">Zone 1</span></label>
                         <label for="zone2"><input type="checkbox" id="f3-zone2" class="f3-zone-checkbox" checked/> <span id="f3-zone2-text">Zone 2</span></label>
                         <label for="zone3"><input type="checkbox" id="f3-zone3" class="f3-zone-checkbox" checked/> <span id="f3-zone3-text">Zone 3</span></label>
-                        <label for="zone4"><input type="checkbox" id="f3-zone4" class="f3-zone-checkbox" checked/> <span id="f3-zone4-text">Zone 4</span></label>
+                        <label for="zone4"><input type="checkbox" id="f3-zone4" class="f3-zone-checkbox" disabled/> <span id="f3-zone4-text">Zone 4</span></label>
                         <label for="zone5"><input type="checkbox" id="f3-zone5" class="f3-zone-checkbox" checked/> <span id="f3-zone5-text">Zone 5</span></label>
                         <label for="zone6"><input type="checkbox" id="f3-zone6" class="f3-zone-checkbox" checked/> <span id="f3-zone6-text">Zone 6</span></label>
                         <label for="zone7"><input type="checkbox" id="f3-zone7" class="f3-zone-checkbox" checked/> <span id="f3-zone7-text">Zone 7</span></label>
