zoom brush toegevoegd aan general.html

--- a/overview/general.html
+++ b/overview/general.html
@@ -26,9 +26,9 @@
                 <div id="general-div" class="vis">
                     <h2>General readings</h2>
                     <select id="general-dropdown" name="sensors">
-                        <option value="coolScheduleValue" selected>COOL Schedule Value</option>
+                        <option value="coolScheduleValue">COOL Schedule Value</option>
                         <option value="deliFanPower">DELI-FAN Power</option>
-                        <option value="drybulbTemperature">Drybulb Temperature</option>
+                        <option value="drybulbTemperature" selected>Drybulb Temperature</option>
                         <option value="loopTempSchedule">Loop Temp Schedule</option>
                         <option value="heatScheduleValue">HEAT Schedule Value</option>
                         <option value="hvacElectricDemandPower">HVAC Electric Demand Power</option>
