selected weer default op lights power

--- a/overview/floor1.html
+++ b/overview/floor1.html
@@ -27,14 +27,14 @@
                     <h2>Floor 1 readings</h2>
                     <div id="f1-dropdown">
                         <select id="f1-sensors" name="sensors">
-                            <option value="f1lightsPower">Lights Power</option><!-- niet zone 6-->
+                            <option value="f1lightsPower" selected>Lights Power</option><!-- niet zone 6-->
                             <option value="f1equipmentPower">Equipment Power</option><!-- niet zone 6-->
                             <option value="f1thermostatTemp">Thermostat Temp</option><!-- niet zone 6-->
                             <option value="f1thermostatHeatingSetpoint">Thermostat Heating Setpoint</option><!-- niet zone 6-->
                             <option value="f1thermostatCoolingSetpoint">Thermostat Cooling Setpoint</option><!-- niet zone 6-->
                             <option value="f1vavAvailabilityManagerNightCycleControlStatus">VAV Availability Manager Night Cycle Control Status</option><!-- no zone-->
                             <option value="f1vavSysSupplyFanFanPower">VAV_SYS SUPPLY FAN:Fan Power</option><!-- no zone-->
-                            <option value="f1bathExhaustFanPower" selected>BATH_EXHAUST:Fan Power</option><!-- no zone-->
+                            <option value="f1bathExhaustFanPower">BATH_EXHAUST:Fan Power</option><!-- no zone-->
                             <option value="f1vavReheatDamperPosition">VAV REHEAT Damper Position</option><!-- niet zone 6-->
                             <option value="f1reheatCoilPower">REHEAT COIL Power</option><!-- niet zone 6-->
                             <option value="f1vavSysHeatingCoilPower">VAV_SYS HEATING COIL Power</option><!-- no zone-->
