standaard dropdown keuze is nu weer lights power

--- a/overview/floor3.html
+++ b/overview/floor3.html
@@ -30,12 +30,12 @@
                             <!-- ZONE 12 ALLEEN REHEAT COIL POWER-->
                             <!-- ZONE 9 GEEN REHEAT COIL POWER, MAAR DE REST WEL-->
                             <!-- ZONE 4 KOMT HELEMAAL NIET VOOR-->
-                            <option value="f3lightsPower">Lights Power</option><!-- niet zones 4 en 12-->
+                            <option value="f3lightsPower" selected>Lights Power</option><!-- niet zones 4 en 12-->
                             <option value="f3equipmentPower">Equipment Power</option><!-- niet zones 4 en 12-->
                             <option value="f3thermostatTemp">Thermostat Temp</option><!-- niet zones 4 en 12-->
                             <option value="f3thermostatHeatingSetpoint">Thermostat Heating Setpoint</option><!-- niet zones 4 en 12-->
                             <option value="f3thermostatCoolingSetpoint">Thermostat Cooling Setpoint</option><!-- niet zones 4 en 12-->
-                            <option value="f3vavSysSupplyFanFanPower" selected>VAV_SYS SUPPLY FAN:Fan Power</option><!-- no zone-->
+                            <option value="f3vavSysSupplyFanFanPower">VAV_SYS SUPPLY FAN:Fan Power</option><!-- no zone-->
                             <option value="f3bathExhaustFanPower">BATH_EXHAUST:Fan Power</option><!-- no zone-->
                             <option value="f3vavReheatDamperPosition">VAV REHEAT Damper Position</option><!-- niet zones 4 en 12-->
                             <option value="f3reheatCoilPower">REHEAT COIL Power</option><!-- niet zones 4 en 9-->
