leuke nieuwe header toegevoegd aan de indexpagina

--- a/overview/index.html
+++ b/overview/index.html
@@ -47,6 +47,11 @@
                         describe the relationship between proximity card data en building data elements.
                     </p>
                     <br/>
+                    <h2>Instructions</h2>
+                    <p>
+                        The visualisations are split into multiple views. ...
+                    </p>
+                    <br/>
                     <h2>Tools</h2>
                     <p>
                         The data used in this project and the visualization was provided by the <a href="http://vacommunity.org/2016+VAST+Challenge%3A+MC2" target="_blank">VACommunity</a>.
@@ -56,7 +61,7 @@
                     <br/>
                     <h2>Credits</h2>
                     <p>
-                        Made by .. for the Programming project in 2016. Special thanks to ..
+                        Made by .. for the Programming project in 2016. Special thanks to Gosia for the idea and the support throughout the project and to Sasha for the supervision.
                     </p>
                 </div>
             </center>
