--- a/overview/general.html
+++ b/overview/general.html
@@ -18,6 +18,7 @@
                     <button id="button-f1" class="button" type="button" value="floor1.html">Floor 1</button>
                     <button id="button-f2" class="button" type="button" value="floor2.html">Floor 2</button>
                     <button id="button-f3" class="button" type="button" value="floor3.html">Floor 3</button>
+                    <button id="button-findings" class="button" type="button" value="findings.html">Findings</button>
                 </div>
             </center>
         </header>
