de general pagina laat nu ook de hazium concentraties van alle vier de zones zien

--- a/overview/general.html
+++ b/overview/general.html
@@ -43,7 +43,15 @@
                         <option value="waterHeaterTankTemperature">Water Heater Tank Temperature</option>
                         <option value="windDirection">Wind Direction</option>
                         <option value="windSpeed">Wind Speed</option>
+                        <option value="haziumData">Hazium Concentrations</options>
                     </select>
+                    <br/><br/>
+                    <div id="hazium-checkboxes">
+                        <label for="F_1_Z_8A"><input type="checkbox" id="general-checkbox-line-1" class="general-hazium-checkbox" value="line-1" checked/> <span id="general-F_1_Z_8A-text">Floor 1 Zone 8A</span></label>
+                        <label for="F_2_Z_2"><input type="checkbox" id="general-checkbox-line-2" class="general-hazium-checkbox" value="line-2" checked/> <span id="general-F_2_Z_2-text">Floor 2 Zone 2</span></label>
+                        <label for="F_2_Z_4"><input type="checkbox" id="general-checkbox-line-3" class="general-hazium-checkbox"  value="line-3" checked/> <span id="general-F_2_Z_4-text">Floor 2 Zone 4</span></label>
+                        <label for="F_3_Z_1"><input type="checkbox" id="general-checkbox-line-4" class="general-hazium-checkbox" value="line-4" checked/> <span id="general-F_3_Z_1-text">Floor 3 Zone 1</span></label>
+                    </div>
                     <h3 id="general-vis-info"></h3>
                 </div>
             </center>
