twee opmerkelijke resultaten toegevoegd

--- a/overview/findings.html
+++ b/overview/findings.html
@@ -53,7 +53,9 @@
                         <b>Water Heater Setpoint:</b> Constant<br/>
                         <b>Water Heater Tank Temperature:</b> Is een harmonica op elke dag, in het weekend is het niet zo wild als doordeweeks<br/>
                         <b>Wind Direction:</b> Fluctueert rond de 50 elke dag, op 5 juni zit de windrichting rond de 0/360 graden, net als op 8 en 9 juni<br/>
-                        <b>Wind Speed:</b> In het midden van de metingen is de windsnelheid lager dan aan het begin en eind
+                        <b>Wind Speed:</b> In het midden van de metingen is de windsnelheid lager dan aan het begin en eind<br/>
+                        De waarden van <b>Supply Side Outlet Temperature</b> zijn exact hetzelfde als de waarden van <b>Water Heater Tank Temperature</b>.<br/>
+                        De waarden van <b>Loop Temp Schedule</b> en <b>Water Heater Setpoint</b> zijn beide constant 60 over de twee weken.
                     </p>
                     <h3>Floor 1</h3>
                     <p>
