--- a/overview/index.html
+++ b/overview/index.html
@@ -62,7 +62,7 @@
                     <br/>
                     <h2>Credits</h2>
                     <p>
-                        Made by .. for the Programming project in 2016. Special thanks to Gosia for the idea and the support throughout the project and to Sasha for the supervision.
+                        Made by .. for the Programming project in 2016. Special thanks to Gosia for the idea and the support throughout the project and to Sascha for the supervision.
                     </p>
                 </div>
             </center>
