--- a/overview/findings.html
+++ b/overview/findings.html
@@ -130,6 +130,13 @@
                         <b>SUPPLY INLET Mass Flow Rate:</b> Zone 9 uitschieter, normaal constant, donderdag op vrijdag plateau omhoog en weekenden constant hoog. Op 7 en 8 juni uitschieters en fluctuaties omlaag. De andere zones zijn constant laag aan het begin van de dag en fluctueren gedurende de rest van de dag, behalve op 7 en 8 juni waar er uitschieters en fluctuaties omhoog zijn. In weekenden constant hoog<br/>
                         <b>VAV Availability Manager Night Cycle Control Status:</b> Constant 0
                     </p>
+                    <h3>Fixed prox</h3>
+                    <p>
+                        <b>General</b>: Op 31 juni zijn er veel meer metingen dan op de andere dagen, voor alle floors. Zaterdag en zondag zijn er weinig/geen metingen.<br/>
+                        <b>Floor 1</b>: In zone 1, 2 en 4 zijn veel meer metingen dan de rest van de zones. Voor zone 5 eindigen de metingen aan het begin van 5 juni. Zone 7 wordt de hele tijd na het midden van de dag bezocht.<br/>
+                        <b>Floor 2</b>: In zone 1, 4, 6 en 7 zijn veel meer metingen dan de rest van de zones. Zone 2 heeft 2 pieken en 2 dalen per doordeweekse dag en er zijn ongeveer 2 keer zo veel metingen als in zone 3. Voor zone 5 eindigen de metingen weer aan het begin van 5 juni.<br/>
+                        <b>Floor 3</b>: Voor zone 1, 4 en de serverroom zijn de meeste metingen. Voor de serverroom is er een grote piek midden op 10 juni en er zijn daarna geen metingen meer. Voor zone 5 eindigen de metingen weer aan het begin van 5 juni. Zone 3 en 6 volgen dezelfde trend, alleen zijn de waarden voor zone 3 hoger dan zone 6. Zone 2 heeft meetal een hoge piek, dal en dan een iets lagere piek, iets voor het midden van dag, behalve op 3 juni waar er nog een extra hoge piek is aan het eind, 6/8 juni waar er een extra hoge piek is direct na de eerste, 9 juni waar de twee pieken even groot zijn, 10 juni: piek, dal, piek, dal, lagere piek, en 13 juni: dal, lage piek, hoge piek.
+                    </p>
                     <br/>
                     <h2>Patterns</h2>
                     <p>
